--- a/src/components/CreateForm.css
+++ b/src/components/CreateForm.css
@@ -9,20 +9,23 @@ body {
   }
   
   .container {
+    overflow: hidden;
     display: flex !important;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex: 1 0 auto;
     height: 100vh;
     max-width: 500px;
-    width: 100%;
+    /* width: 100%; */
     margin: auto;
   }
   .container > form {
-    width: 70%;
+    transform: translateY(4vh);
+    width: 72.5%;
     border: 1px solid #dfdfdf;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 6px;
     background: #fff;
   }
   pre {
@@ -36,4 +39,18 @@ body {
   }
   p {
     color: red;
+  }
+
+  .form-label{
+    font-size: 2.4vh;
+  }
+  
+  .form-input{
+    font-size: 2.25vh;
+  }
+
+  #form-btn{
+    margin-top: .5vh;
+    font-size: 1.2vw;
+    border-radius: 3px;
   }
