--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,19 @@
 #food-card{
   text-align: center;
 }
+
+#food-name{
+  font-size: 4vh;
+}
+
+#card-text{
+  font-size: 3vh;
+}
+
+#card-btn{
+  font-size: 2.5vh;
+}
+
+#card{
+  margin: 1vh 1vh 1vh 1vh ;
+}
