moved fetch location to app & favorites function

--- a/src/components/CreateForm.css
+++ b/src/components/CreateForm.css
@@ -9,7 +9,7 @@ body {
   }
   
   .container {
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex !important;
     flex-direction: column;
     justify-content: center;
