--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: auto;
 }
 
 .app {
@@ -54,6 +55,7 @@
 
 #card-btn{
   font-size: 2.5vh;
+  margin-right: .5vw;
 }
 
 #card{
