--- a/src/index.css
+++ b/src/index.css
@@ -20,44 +20,45 @@
 .nav-btn {
   width: 6vw;
   height: 3vh;
-  margin: 1vh 2vw 1vh 2vw ;
+  margin: 1vh 2vw 1vh 2vw;
   transform: translateX(30vw);
 }
 
-#search-container{
+#search-container {
   display: inline;
   width: 100%;
-  background: lime
+  background: lime;
 }
 
-.filter{
+.filter {
   width: 20vw;
   transform: translateX(10vw);
   text-align: center;
 }
 
-#dropdown{
+#dropdown {
   position: absolute;
   transform: translateX(-10vw);
 }
 
-#food-card{
+#food-card {
   text-align: center;
 }
 
-#food-name{
+#food-name {
   font-size: 4vh;
 }
 
-#card-text{
+#card-text {
   font-size: 3vh;
 }
 
-#card-btn{
-  font-size: 2.5vh;
-  margin-right: .5vw;
+#card-btn {
+  font-size: 2vh;
+  margin-right: 3vw;
+  margin-top: 0.5vh;
 }
 
-#card{
-  margin: 1vh 1vh 1vh 1vh ;
+#card {
+  margin: 1vh 1vh 1vh 1vh;
 }
