--- a/src/components/CreateForm.css
+++ b/src/components/CreateForm.css
@@ -20,37 +20,37 @@ body {
     /* width: 100%; */
     margin: auto;
   }
+
   .container > form {
     transform: translateY(4vh);
-    width: 72.5%;
+    width: 60%;
     border: 1px solid #dfdfdf;
     padding: 20px;
     border-radius: 6px;
     background: #fff;
-  }
-  pre {
-    width: 70%;
-    color: #fff;
-    font-size: larger;
-  }
-  
-  button {
-    background: #0563b4 !important;
-  }
-  p {
-    color: red;
-  }
-
-  .form-label{
-    font-size: 2.4vh;
-  }
-  
-  .form-input{
-    font-size: 2.25vh;
   }
 
   #form-btn{
     margin-top: .5vh;
     font-size: 1.2vw;
     border-radius: 3px;
+  }
+
+  input[type=text], select {
+    width: 100%;
+    padding: 6px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  button {
+    background: #0563b4 !important;
+  }
+
+  #form-header {
+    text-align: center;
+    font-family: Merriweather;
   }
