--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -36,21 +38,18 @@
   text-align: center;
 }
 
-#dropdown {
-  position: absolute;
-  transform: translateX(-10vw);
-}
-
 #food-card {
   text-align: center;
 }
 
 #food-name {
   font-size: 4vh;
+  font-family: Merriweather;
 }
 
 #card-text {
-  font-size: 3vh;
+  font-size: 2.5vh;
+  font-family: Merriweather;
 }
 
 #card-btn {
@@ -59,6 +58,20 @@
   margin-top: 0.5vh;
 }
 
+#card-container {
+  transform: translateX(3.9vw);
+}
+
 #card {
   margin: 1vh 1vh 1vh 1vh;
+}
+
+#search {
+  width: 400px;
+  border-radius: 0px;
+}
+
+#search-btn {
+  height: 2.5rem;
+  width: 1.75rem;
 }
